# visuMark_Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  models.yaml
data/: tasks_example.json
report/: SYSUReport.cls  lab4.aux  lab4.fdb_latexmk  lab4.fls  lab4.out  lab4.tex  lab4.toc  lab4.xdv
scripts/: cli.py  evaluate.py  run_agent.py  run_web.py
src/visumark/: __init__.py
src/visumark/action/: __init__.py  executor.py  parser.py
src/visumark/core/: __init__.py  agent.py  types.py
src/visumark/dataset/: __init__.py  base.py  mind2web.py
src/visumark/environment/: __init__.py  base.py  dom_utils.py  live_env.py  offline_env.py
src/visumark/evaluation/: __init__.py  comparator.py  metrics.py  reporter.py
src/visumark/perception/: __init__.py  base.py  dom_bridge.py  element_extractor.py  html_perceptor.py  som_marker.py  som_perceptor.py
src/visumark/reasoning/: __init__.py  base.py  factory.py
src/visumark/reasoning/prompts/: __init__.py  html_prompts.py  (+1 more)
src/visumark/utils/: __init__.py  config.py  image.py  logging.py
src/visumark_agent/: __init__.py
src/visumark_agent/agent/: __init__.py  prompts.py  visumark.py
src/visumark_agent/environment/: __init__.py  actions.py  browser.py
src/visumark_agent/parser/: __init__.py  action_parser.py
src/visumark_agent/som/: __init__.py  extractor.py  marker.py
src/visumark_agent/utils/: __init__.py  config.py  logging.py
src/visumark_agent/vlm/: __init__.py  base.py  openai.py
src/web/: __init__.py  server.py
src/web/static/: app.js  index.html  style.css
(+5 files in other folders)
