[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visumark-agent"
version = "0.1.0"
description = "VisuMark Agent: VLM-based web agent with Set-of-Mark visual grounding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VisuMark Team", email = "2735375422@qq.com"},
]
dependencies = [
    "playwright>=1.40",
    "openai>=1.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.1",
]

[project.scripts]
visumark = "scripts.run_agent:main"

[tool.setuptools.packages.find]
where = ["src"]
